syntax = "proto3";
option go_package = ".;GCToLs";

package GCToLS;

enum Cmd
{
  eMsgToLSFromGC_Unknow = 0x000;
  //登录相关
  eMsgToLSFromGC_AskLogin = 0x001;


  // 消息相关
  eMsgToLSFromGC_SendMsg = 0x0A0;
  eMsgToLSFromGC_ReadMsg = 0x0A1;

  eMsgToLSFromGC_SendGroupMsg = 0x0B2;

  //消息通知相关
  eMsgToGCFromLS_NetMsg = 0x0D0;
}

message AskLogin
{
  Cmd cmd = 1;
  string plat = 2;
  string uid = 3;
  string login = 4;
  string pwd = 5;
}


message SendMsg
{
  Cmd cmd = 1;
  string send = 2;
  string recv = 3;
  string plat = 4;
  string data = 5;
}

message SendGroupMsg
{
  Cmd cmd = 1;
  string send = 2;
  string recv = 3;
  string plat = 4;
  string data = 5;
}

message NetMsg
{
  Cmd cmd = 1;
  string send = 2;
  string recv = 3;
  string plat = 4;
  string mid = 5;
}

message ReadMsg
{
  Cmd cmd = 1;
  string send = 2;
  string recv = 3;
  string mid = 4;
}

//登录返回
message LoginResult {
  Cmd cmd = 1;
  string code = 2;
  string uid = 3;
  string data = 4;
}
//发消息返回
message SendGroupResult
{
  Cmd cmd = 1;
  string code = 2;
  string recv = 3;
  string plat = 4;
  string data = 5;
  string send = 6;
}
